[gd_scene format=3 uid="uid://dgitfqnhx4ghe"]

[ext_resource type="Script" uid="uid://blhnwkxv1r6eg" path="res://addons/TileMapLayer3D/core/editor_ui/tile_context_toolbar.gd" id="1_2pos1"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_k7ccc"]
content_margin_left = 0.0
content_margin_top = 4.0
content_margin_right = 0.0
content_margin_bottom = 4.0
color = Color(0.5, 0.5, 0.5, 1)
grow_begin = 2.0
grow_end = 2.0
thickness = 2
vertical = true

[sub_resource type="DPITexture" id="DPITexture_2pos1"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M 11 8 a 4 4 0 1 0 -4 4 v 2 a 6 6 0 1 1 6 -6 h 2 l -3 4 l -3 -4 z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(0.83, 0.78, 0.62, 1)
}

[sub_resource type="DPITexture" id="DPITexture_2l7u3"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M5 8a4 4 0 1 1 4 4v2a6 6 0 1 0-6-6H1l3 4 3-4z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(0.83, 0.78, 0.62, 1)
}

[sub_resource type="DPITexture" id="DPITexture_5wmcv"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m9 1v2h2.586l-3.586 3.586-4.293-4.293-1.414 1.414 4.293 4.293-4.293 4.293 1.414 1.414 4.293-4.293 3.586 3.586h-2.586v2h5a1 1 0 0 0 1-1v-5h-2v2.586l-3.586-3.586 3.586-3.586v2.586h2v-5a1 1 0 0 0 -1-1z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(0.83, 0.78, 0.62, 1)
}

[sub_resource type="DPITexture" id="DPITexture_cmnnk"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill-opacity=\".411\" d=\"M6 0v4.42A4 4 0 0 0 4.291 6H0v4h4.42A4 4 0 0 0 6 11.582V16h4v-4.42A4 4 0 0 0 11.709 10H16V6h-4.42A4 4 0 0 0 10 4.418V0z\"/><path fill=\"#d6d6d6\" d=\"M7 1v3a4 4 0 0 1 2 0V1zm1 4a3 3 0 0 0 0 6 3 3 0 0 0 0-6zM1 7v2h2.87a4 4 0 0 1 0-2H1zm11 0a4 4 0 0 1 0 2h3V7zm-5 8h2v-3a4 4 0 0 1-2 0z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(0.83, 0.78, 0.62, 1)
}

[sub_resource type="DPITexture" id="DPITexture_001wp"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m8 16-3.5-2.5H7V11h2v2.5h2.5zM8 0 4.5 2.5H7V5h2V2.5h2.5zM1 7h14v2H1z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(0.83, 0.78, 0.62, 1)
}

[sub_resource type="DPITexture" id="DPITexture_k7ccc"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m7 1v4h2v-4zm-6 6v2h4v-2zm10 0v.61328l3.3711 1.3867h.62891v-2h-4zm-3 1 3.291 8 .94726-2.8203 1.8828 1.8828.94336-.94141-1.8848-1.8828 2.8203-.94726-8-3.291zm-1 3v4h2v-.625l-1.3887-3.375h-.61133z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(0.83, 0.78, 0.62, 1)
}

[sub_resource type="DPITexture" id="DPITexture_1g4tk"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M8 1v2H6a5 5 0 0 0-4 8l1.414-1.414A3 3 0 0 1 6 5h2v2l4-3-4-3zm6 4-1.414 1.414A3 3 0 0 1 10 11H8V9l-4 3 4 3v-2h2a5 5 0 0 0 4-8z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(0.83, 0.78, 0.62, 1)
}

[sub_resource type="DPITexture" id="DPITexture_vv3l8"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m5 1v1h-4v2h14v-2h-4v-1zm-3 4v8a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-8zm1 2h2v6h-2zm4 0h2v6h-2zm4 0h2v6h-2z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(0.83, 0.78, 0.62, 1)
}

[node name="TileContextToolbar" type="HBoxContainer" unique_id=608753685]
clip_contents = true
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_2pos1")

[node name="VSeparator" type="VSeparator" parent="." unique_id=465997253]
layout_mode = 2
theme_override_constants/separation = 8
theme_override_styles/separator = SubResource("StyleBoxLine_k7ccc")

[node name="RotateRightBtn" type="Button" parent="." unique_id=878362860]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "Rotate tile 90° counter-clockwise (Q)"
theme_override_font_sizes/font_size = 10
icon = SubResource("DPITexture_2pos1")
icon_alignment = 1

[node name="RotateLeftBtn" type="Button" parent="." unique_id=1129405052]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "Rotate tile 90° clockwise (E)"
theme_override_font_sizes/font_size = 10
icon = SubResource("DPITexture_2l7u3")
icon_alignment = 1

[node name="CycleTiltBtn" type="Button" parent="." unique_id=1662385522]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "Cycle tilt angle (R, Shift+R for reverse)"
theme_override_font_sizes/font_size = 10
icon = SubResource("DPITexture_5wmcv")
icon_alignment = 1

[node name="ResetOrientationBtn" type="Button" parent="." unique_id=420104034]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "Reset to flat orientation (T)"
theme_override_font_sizes/font_size = 10
icon = SubResource("DPITexture_cmnnk")
icon_alignment = 1

[node name="FlipFaceBtn" type="Button" parent="." unique_id=795511920]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "Flip tile face (F)"
theme_override_font_sizes/font_size = 10
toggle_mode = true
icon = SubResource("DPITexture_001wp")
icon_alignment = 1

[node name="StatusLabel" type="Label" parent="." unique_id=1058546464]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "0°"
horizontal_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="." unique_id=1396373499]
layout_mode = 2
theme_override_constants/separation = 8
theme_override_styles/separator = SubResource("StyleBoxLine_k7ccc")

[node name="SmartSelectBtn" type="Button" parent="." unique_id=454078205]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "SmartSelect"
theme_override_font_sizes/font_size = 10
toggle_mode = true
icon = SubResource("DPITexture_k7ccc")

[node name="SmartSelectionModeOptBtn" type="OptionButton" parent="." unique_id=1463411107]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
clip_text = true
selected = 0
item_count = 3
popup/item_0/text = "0. Single Pick"
popup/item_0/id = 0
popup/item_1/text = "1. Connected UV"
popup/item_1/id = 1
popup/item_2/text = "2 Connected Neighbor"
popup/item_2/id = 2

[node name="SmartSelectReplaceBtn" type="Button" parent="." unique_id=1897883417]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "SmartSelect"
theme_override_font_sizes/font_size = 10
icon = SubResource("DPITexture_1g4tk")
icon_alignment = 1

[node name="SmartSelectDeleteBtn" type="Button" parent="." unique_id=1678081314]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "SmartSelect"
theme_override_font_sizes/font_size = 10
icon = SubResource("DPITexture_vv3l8")
icon_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="." unique_id=348613659]
layout_mode = 2
theme_override_constants/separation = 8
theme_override_styles/separator = SubResource("StyleBoxLine_k7ccc")
